--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cometchat-pro/chat": "^2.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.13.1",
+    "load-script": "^1.0.0",
+    "npm-upgrade": "^2.0.3",
     "react": "^16.13.1",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-relay": "^9.0.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
