--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "load-script": "^1.0.0",
     "npm-upgrade": "^2.0.3",
     "react": "^16.13.1",
+    "react-chat-widget": "^2.1.5",
     "react-chat-window": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-relay": "^9.0.0",
