--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chat-widget": "^2.1.5",
     "react-chat-window": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-messenger-customer-chat": "^0.7.2",
     "react-relay": "^9.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
