argon-dashboard components in package*.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
     "react-messenger-send-to-messenger": "^0.2.0",
     "react-relay": "^9.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-chartjs-2": "2.9.0",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-datetime": "2.16.3",
+    "react-google-maps": "9.4.5",
+    "@fortawesome/fontawesome-free": "5.12.1",
+    "chart.js": "2.9.3",
+    "classnames": "2.2.6",
+    "moment": "2.24.0",
+    "node-sass": "4.13.1",
+    "nouislider": "14.1.1",
+    "reactstrap": "8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +55,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "@types/googlemaps": "3.39.2",
+    "@types/markerclustererplus": "2.1.33",
+    "@types/react": "16.9.19",
+    "eslint-plugin-flowtype": "3.13.0",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
+    "typescript": "3.7.5"
   }
 }
