--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paramshah10.github.io/patient_dashboard",
+  "homepage": "https://warriorwellness.me/",
   "dependencies": {
     "@cometchat-pro/chat": "^2.0.6",
     "@fortawesome/fontawesome-free": "5.12.1",
